Forgot to change the title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
   <meta charset="utf-8" />
 
-  <title>Bingo</title>
+  <title>ATP Bingo</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
 
